@startuml

!pragma layout smetana

class RecipeFactory {

    + Recipe create(int ID, String title, String url, String imageUrl, RecipeInfo info, NutritionData nutrition)

}

class RecipeInfoFactory {

    + RecipeInfo create(int recipeID, int servings, int readyInMinutes, int healthScore, Collection<String> ingredients, Collection<String> instructions)

}

class NutritionDataFactory {

    + NutritionData create(int recipeID, Map<String, Float> nutrients)

}

class Recipe {

    - int ID
    - String title
    - String url
    - String imageUrl
    - RecipeInfo info
    - NutritionData nutrition
    - Collection<Recipe> similarRecipes

    + int getID()
    + String getTitle()
    + String getUrl()
    + Image getImage()
    + RecipeInfo getInfo()
    + NutritionData getNutrition()
    + Collection<Recipe> getSimilarRecipes()
    + String toString()

}

class RecipeInfo {

    - int recipeID
    - int servings
    - int readyInMinutes
    - int healthScore
    - Collection<String> ingredients
    - Collection<String> instructions

    + int getRecipeID()
    + int getServings()
    + int getTime()
    + int getHealthScore()
    + Collection<String> getIngredients()
    + Collection<String> getInstructions()
    + String toString()

}

class NutritionData {

    - int recipeID
    - Map<String, Float> nutrients

    + int getRecipeID()
    + Map<String, Float> getNutrients()
    + String analyze()
    + String toString()

}

abstract class SearchFilter {

    - Collection<String> cuisine
    - Collection<String> excludeCuisine
    - Collection<String> diet
    - Collection<String> intolerances
    - Collection<String> excludeIngredients
    - Map<String, Float[]> nutrients

    + {abstract} Collection<Recipe> getMatchingRecipes()

}

class RecipeSearchFilter {

    - String query
    - String type
    - Collection<String> includeIngredients

    + Collection<Recipe> getMatchingRecipes()

}

class RecommendationSearchFilter {

    + Collection<Recipe> getMatchingRecipes()

}

Recipe *-- Recipe
Recipe <.. RecipeFactory
RecipeInfo <.. RecipeFactory
NutritionData <.. RecipeFactory
RecipeInfo <.. RecipeInfoFactory
NutritionData <.. NutritionDataFactory

Recipe *-- RecipeInfo
Recipe *-- NutritionData

Recipe <.. SearchFilter

SearchFilter <|-- RecipeSearchFilter
SearchFilter <|-- RecommendationSearchFilter

@enduml